fix: footer at bottom & menu collapses

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,8 @@
   padding:0;
 }
 
+
+
 .App {
   text-align: center;
 }
@@ -57,9 +59,13 @@
 
 .page-wrapper {
   /* position: relative; */
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
+}
+
+.app-pages {
+  flex-grow: 1;
 }
 
 table {
@@ -161,5 +167,9 @@ table {
   font-family: 'Stardom';
   color: white;
   text-align: center;
-  justify-content: flex-end;
+  position: relative;
+  bottom: 0;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: flex-end; */
 }
